<resources>
    <string name="app_name">Mój Cykl</string>
    <string name="add_day_manually">Dodaj dzień</string>
    <string name="add_cycle_manually">Dodaj cykl</string>
    <string name="show_cycles">Moje cykle</string>
    <string name="settings">Ustawienia</string>
    <string name="new_day">Nowy dzień</string>
    <string name="new_cycle">Nowy cykl</string>
    <string name="temperature_label"><u>Temperatura</u></string>
    <string name="mucus_label"><u>Śluz</u></string>
    <string name="bleeding_label"><u>Krwawienie</u></string>
    <string name="spotting">Plamienie</string>
    <string name="bleeding">Krwawienie</string>
    <string name="cervix_label"><u>Szyjka</u></string>
    <string name="cervix_label_dilation">Rozwarcie</string>
    <string name="cervix_label_position">Pozycja</string>
    <string name="cervix_soft">Miękka</string>
    <string name="cervix_hard">Twarda</string>
    <string name="cervix_hardness">Twardość</string>
    <string name="temperature_hint">36.60</string>
    <string name="mucus_hint">Rozciągliwy</string>
    <string name="mucus_wet">Mokro / Ślisko</string>
    <string name="mucus_stretchy">Rozciągliwy</string>
    <string name="mucus_transparent">Przejrzysty</string>
    <string name="mucus_humid">Wilgotno</string>
    <string name="mucus_sticky">Lepki / Gęsty</string>
    <string name="mucus_muzzy"> Mętny</string>
    <string name="mucus_dry">Sucho</string>
    <string name="mucus_anomalous">Nietypowy</string>
    <string name="more_symptoms"><u>Objawy dodatkowe</u></string>
    <string name="ovulatory_pain">Ból owulacyjny</string>
    <string name="breast_tension">Napięcie w piersiach</string>
    <string name="others">Inne:</string>
    <string name="intercourse"><u>Współżycie</u></string>
    <string name="date">Data</string>
    <string name="save">Zapisz</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="edit">Edytuj</string>
    <string name="delete">Usuń</string>
    <string name="preview">Podgląd</string>
    <string name="popup_new_cycle_text">Czy na pewno chcesz rozpocząć nowy cykl?</string>
    <string name="add_cycle_date">Data rozpoczęcia cyklu:</string>
    <string name="no_temperature">Nie badam temperatury</string>
    <string name="no_cervix">Nie badam szyjki</string>
    <string name="export">Eksportuj do pliku</string>
</resources>
