<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dialogCycleText"
                android:text="@string/add_cycle_date"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_margin="20dp"
                android:layout_gravity="center"/>
    <EditText
                android:id="@+id/cycleDatePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                android:focusable="false"
                android:layout_gravity="center_horizontal"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/save"
                android:onClick="onCycleSave"/>

</LinearLayout>