<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="jarosyjarosy.menstrualcycleproject.activities.MainActivity">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>
        <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:paddingTop="?attr/actionBarSize"
                android:orientation="vertical">
            <ScrollView android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="vertical">
                <LinearLayout
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                    <EditText
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:id="@+id/dateEdit"
                            android:inputType="numberDecimal"
                            android:clickable="true"
                            android:focusable="false"
                            android:hint="@string/date"/>
                    <android.support.constraint.ConstraintLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                        <TextView
                                android:id="@+id/temperatureLabel"
                                android:text="@string/temperature_label"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="10pt"
                                app:layout_constraintTop_toTopOf="parent"
                                android:layout_marginTop="8dp"
                                android:layout_marginLeft="0dp"
                                app:layout_constraintLeft_toLeftOf="parent"/>
                        <NumberPicker
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/temperaturePicker"
                                android:layout_marginTop="8dp"
                                app:layout_constraintTop_toBottomOf="@+id/temperatureLabel"
                                android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="parent"
                                android:layout_marginRight="8dp" app:layout_constraintRight_toRightOf="parent"/>
                    </android.support.constraint.ConstraintLayout>

                    <TextView
                            android:id="@+id/BleedingLabel"
                            android:text="@string/bleeding_label"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="10pt"/>
                    <RadioGroup
                            android:id="@+id/radioGroupBleeding"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        <RadioButton
                                android:id="@+id/radioBleedYes"
                                android:text="@string/yes"
                                android:textSize="7pt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="false"/>

                        <RadioButton
                                android:id="@+id/radioBleedNo"
                                android:text="@string/no"
                                android:textSize="7pt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="false"/>


                        <RadioButton
                                android:id="@+id/radioSpotting"
                                android:text="@string/spotting"
                                android:textSize="7pt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="false"/>
                    </RadioGroup>


                    <TextView
                            android:id="@+id/mucusLabel"
                            android:text="@string/mucus_label"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="10pt"/>
                    <GridLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:rowCount="4"
                            android:columnCount="2"
                            android:orientation="horizontal">

                        <CheckBox
                                android:id="@+id/wet_checkbox"
                                android:text="@string/mucus_wet"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="start|top"/>
                        <CheckBox
                                android:id="@+id/stretchy_checkbox"
                                android:text="@string/mucus_stretchy"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="start|top"/>
                        <CheckBox
                                android:id="@+id/transparent_checkbox"
                                android:text="@string/mucus_transparent"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="start|top"/>
                        <CheckBox
                                android:id="@+id/humid_checkbox"
                                android:text="@string/mucus_humid"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="start|top"/>
                        <CheckBox
                                android:id="@+id/sticky_checkbox"
                                android:text="@string/mucus_sticky"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="start|top"/>
                        <CheckBox
                                android:id="@+id/muzzy_checkbox"
                                android:text="@string/mucus_muzzy"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="start|top"/>
                        <CheckBox
                                android:id="@+id/dry_checkbox"
                                android:text="@string/mucus_dry"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="start|top"/>
                        <CheckBox
                                android:id="@+id/anomalous_checkbox"
                                android:text="@string/mucus_anomalous"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="start|top"/>

                    </GridLayout>

                    <TextView
                            android:id="@+id/cervixLabel"
                            android:text="@string/cervix_label"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="10pt"/>
                    <GridLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:rowCount="4"
                            android:columnCount="3"
                            android:orientation="vertical">
                        <TextView
                                android:id="@+id/cervixLabelPosition"
                                android:text="@string/cervix_label_position"
                                android:layout_width="wrap_content"
                                android:layout_height="20dp"
                                android:layout_columnSpan="2"
                                android:textSize="7pt"
                                android:textStyle="italic"/>
                        <SeekBar
                                android:id="@+id/seekPosition"
                                android:layout_columnSpan="2"
                                android:layout_height="20dp"
                                android:layout_width="200dp"
                                android:max="10"/>

                        <TextView
                                android:id="@+id/cervixLabelDilation"
                                android:text="@string/cervix_label_dilation"
                                android:layout_width="wrap_content"
                                android:layout_height="20dp"
                                android:layout_columnSpan="2"
                                android:textSize="7pt"
                                android:textStyle="italic"/>
                        <SeekBar
                                android:id="@+id/seekDilation"
                                android:layout_columnSpan="2"
                                android:layout_height="20dp"
                                android:layout_width="200dp"
                                android:max="10"/>

                        <ImageView
                                android:id="@+id/cervixCanvas"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_rowSpan="4"/>
                    </GridLayout>
                    <TextView
                            android:id="@+id/cervixLabelHardness"
                            android:text="@string/cervix_hardness"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="7pt"
                            android:textStyle="italic"/>
                    <RadioGroup
                            android:id="@+id/radioGroupHardness"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        <RadioButton
                                android:id="@+id/radioSoft"
                                android:text="@string/cervix_soft"
                                android:textSize="5pt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="false"/>

                        <RadioButton
                                android:id="@+id/radioHard"
                                android:text="@string/cervix_hard"
                                android:textSize="5pt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="false"/>
                    </RadioGroup>
                    <TextView
                            android:id="@+id/moreSymptomsLabel"
                            android:text="@string/more_symptoms"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="10pt"
                            android:layout_gravity="center_horizontal"/>
                    <TextView
                            android:id="@+id/ovulatoryPainLabel"
                            android:text="@string/ovulatory_pain"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="7pt"
                            android:textStyle="italic"/>
                    <RadioGroup
                            android:id="@+id/radioGroupOvulatoryPain"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        <RadioButton
                                android:id="@+id/radioPainYes"
                                android:text="@string/yes"
                                android:textSize="5pt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="false"/>


                        <RadioButton
                                android:id="@+id/radioPainNo"
                                android:text="@string/no"
                                android:textSize="5pt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="false"/>
                    </RadioGroup>

                    <TextView
                            android:id="@+id/ovulatoryBreastTension"
                            android:text="@string/breast_tension"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="7pt"
                            android:textStyle="italic"/>
                    <RadioGroup
                            android:id="@+id/radioGroupBreastTension"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        <RadioButton
                                android:id="@+id/radioBreastYes"
                                android:text="@string/yes"
                                android:textSize="5pt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="false"/>

                        <RadioButton
                                android:id="@+id/radioBreastNo"
                                android:text="@string/no"
                                android:textSize="5pt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="false"/>
                    </RadioGroup>
                    <TextView
                            android:id="@+id/othersLabel"
                            android:text="@string/others"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="7pt"
                            android:textStyle="italic"
                            android:layout_gravity="center_horizontal"/>
                    <EditText
                            android:layout_height="match_parent"
                            android:layout_width="match_parent"
                            android:id="@+id/other"
                            android:inputType="text"
                            android:clickable="true"
                            android:hint="..."/>

                    <TextView
                            android:id="@+id/intercourseLabel"
                            android:text="@string/intercourse"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="10pt"/>
                    <RadioGroup
                            android:id="@+id/radioIntercourse"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        <RadioButton
                                android:id="@+id/radioIntercourseYes"
                                android:text="@string/yes"
                                android:textSize="7pt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="false"/>

                        <RadioButton
                                android:id="@+id/radioIntercourseNo"
                                android:text="@string/no"
                                android:textSize="7pt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="false"/>
                    </RadioGroup>
                    <Button android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/save"
                            android:onClick="onSaveButtonClick"
                            android:textSize="10pt"/>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </FrameLayout>


    <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:menu="@menu/drawer_view"/>

</android.support.v4.widget.DrawerLayout>
