<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="jarosyjarosy.mentrualcycleproject.activities.MainActivity">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

        <ScrollView android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="?attr/actionBarSize"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical">

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">
                <android.support.constraint.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    <TextView
                            android:id="@+id/temperatureLabel"
                            android:text="@string/temperature_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="10pt"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginTop="8dp"
                            android:layout_marginLeft="0dp"
                            app:layout_constraintLeft_toLeftOf="parent"/>
                    <NumberPicker
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/temperaturePicker"
                            android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/temperatureLabel"
                            android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="parent"
                            android:layout_marginRight="8dp" app:layout_constraintRight_toRightOf="parent"/>
                </android.support.constraint.ConstraintLayout>

                <TextView
                        android:id="@+id/mucusLabel"
                        android:text="@string/mucus_label"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="10pt"
                        android:layout_gravity="center_horizontal"/>
                <GridLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:rowCount="4"
                        android:columnCount="2"
                        android:orientation="horizontal">

                    <CheckBox
                            android:id="@+id/wet_checkbox"
                            android:text="@string/mucus_wet"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="start|top"/>
                    <CheckBox
                            android:id="@+id/stretchy_checkbox"
                            android:text="@string/mucus_stretchy"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="start|top"/>
                    <CheckBox
                            android:id="@+id/transparent_checkbox"
                            android:text="@string/mucus_transparent"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="start|top"/>
                    <CheckBox
                            android:id="@+id/humid_checkbox"
                            android:text="@string/mucus_humid"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="start|top"/>
                    <CheckBox
                            android:id="@+id/sticky_checkbox"
                            android:text="@string/mucus_sticky"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="start|top"/>
                    <CheckBox
                            android:id="@+id/muzzy_checkbox"
                            android:text="@string/mucus_muzzy"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="start|top"/>
                    <CheckBox
                            android:id="@+id/dry_checkbox"
                            android:text="@string/mucus_dry"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="start|top"/>
                    <CheckBox
                            android:id="@+id/anomalous_checkbox"
                            android:text="@string/mucus_anomalous"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="start|top"/>

                </GridLayout>

            </LinearLayout>
        </ScrollView>


    </FrameLayout>


    <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:menu="@menu/drawer_view"/>

</android.support.v4.widget.DrawerLayout>
