<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:background="@drawable/pop_background">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:id="@+id/buttonYes"
                android:textStyle="normal|bold|italic"
                android:onClick="onYesClick"
                android:layout_marginEnd="35dp"
                android:layout_below="@+id/popupText" android:layout_alignEnd="@+id/popupText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/popupText"
            android:text="@string/popup_new_cycle_text"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="#000000"
            android:textStyle="bold|italic"
            android:layout_marginTop="10dp" />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:id="@+id/buttonNo"
                android:onClick="onNoClick"
                android:textStyle="normal|bold|italic"
                android:layout_marginStart="35dp" android:layout_below="@+id/popupText"
                android:layout_alignStart="@+id/popupText"/>

    </RelativeLayout>

</LinearLayout>